syntax = "proto3";
package tutorial; // todo rename and re gen to be different package

option go_package = "github.com/lcmaguire/protoc-gen-go-goo/exampleconnect/sample";

service StreamingService {
    rpc ClientStream(stream GreetRequest) returns (GreetResponse) {}
    rpc ResponseStream(GreetRequest) returns (stream GreetResponse) {}
    rpc BiDirectionalStream(stream GreetRequest) returns (stream GreetResponse) {}
}

message GreetRequest {
    string name = 1;
}
  
message GreetResponse {
    string greeting = 1;
}